--- a/app/admin/template/administrative/supplier.twig
+++ b/app/admin/template/administrative/supplier.twig
@@ -259,7 +259,7 @@
 		</form>
 		<script type="text/javascript">
 			$(document).ready(function() {
-				$('input[name="supplier[iban]"]').mask('SS00 0000 0000 0000 0000 00', { placeholder: '____ ____ ____ ____ ____ __'  });
+				$('input[name="supplier[iban]"]').mask('SSAA AAAA 0000 0000 0000 0000 0000', { placeholder: '____ ____ ____ ____ ____ ____ ____'  });
 			});
 
 			function change_country() {
