--- a/app/admin/template/financial/account.twig
+++ b/app/admin/template/financial/account.twig
@@ -8,6 +8,7 @@
 			<li>{% trans "Import" %}</li>
 		</ol>
 
+		<form class="form-horizontal" method="post" action="/financial/account?action=import">
 		<div class="panel panel-default">
 			<div class="panel-heading">{% trans "Import bank transactions" %}</div>
 			<div class="panel-body">
@@ -43,28 +44,38 @@
 							</div>
 							<div class="fallback"></div>
 						</div>
+					</div>
+				</div>
 
+				<div class="form-group hidden form_submit">
+					<div class="col-xs-9 col-xs-offset-3">
+						<button type="submit" class="btn btn-primary">{% trans "Start import" %}</button>
 					</div>
 				</div>
 			</div>
 		</div>
+		</form>
 
 		<script type="text/javascript" src="/dropzone/dist/dropzone.js"></script>
 		<script type="text/javascript" src="/handlebars/handlebars.min.js"></script>
 		<script type="text/x-handlebars-template" id="import-file-template">
 			<div class="file">
 				<div class="row">
-					<input type="hidden" name="import[file_id]" value="((file.id))" />
-					<span>
-						<strong>((file.name))</strong>
-					</span>
-					[ ((file.human_size)) ]
-					<a href="javascript:void(0);" onclick="remove_file($(this).parents('.file'));" title="{% trans "Delete file" %}">
-						<span class="glyphicon glyphicon-trash"></span>
--					</a>
+					<div class="col-xs-12">
+						<input type="hidden" name="import[file_id]" value="((file.id))" />
+						<span>
+							<strong>((file.name))</strong>
+						</span>
+						[ ((file.human_size)) ]
+						<a href="javascript:void(0);" onclick="remove_file($(this).parents('.file'));" title="{% trans "Delete file" %}">
+							<span class="glyphicon glyphicon-trash"></span>
+						</a>
+					</div>
 				</div>
 				<div class="row">
-					((parser.classname))
+					<div class="col-xs-12">
+						((parser.classname))
+					</div>
 				</div>
 
 			</div>
@@ -101,6 +112,11 @@
 							$('#import-file').html(e);
 							$('#import-file').removeClass('hide');
 						}
+
+						if (response.parser != false) {
+							$('.form_submit').removeClass('hidden');
+						}
+
 					});
 
 					this.on('uploadprogress', function(file, progress) {
@@ -127,6 +143,7 @@
 				object.remove();
 				$('#import-dropzone').show();
 				$('#import-file').addClass('hide');
+				$('.form_submit').addClass('hidden');
 			}
 
 		</script>
@@ -171,7 +188,7 @@
 				{{ base.pager_count(pager.item_count) }}
 			</div>
 			<div class="panel-body">
-			{% for customer in pager.items %}
+			{% for account in pager.items %}
 				{% if loop.first %}
 					<table class="table table-hover table-striped table-condensed table-responsive">
 					<thead>
@@ -179,17 +196,18 @@
 							<th>#</th>
 							<th>{{ pager.create_header('Identifier'|trans, 'identifier')|raw }}</th>
 							<th>{{ pager.create_header('Name'|trans, 'name')|raw }}</th>
-							<th>&nbsp;</th>
+							<th width="20">&nbsp;</th>
 						</tr>
 					</thead>
 					<tbody>
 				{% endif %}
 
 				<tr>
+					<td>{{ account.id }}</td>
 					<td>{{ account.identifier }}</td>
 					<td>{{ account.name }}</td>
 					<td>
-						<a href="/financial/account?id={{ account.id }}" title="">
+						<a href="/financial/account?action=edit&id={{ account.id }}" title="">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 					</td>
