--- a/app/admin/template/user.twig
+++ b/app/admin/template/user.twig
@@ -76,6 +76,17 @@
 					</div>
 
 					<div class="form-group">
+						<label for="language_id" class="col-xs-3 control-label">{% trans "Role" %}</label>
+						<div class="col-xs-4">
+							<select name="user[role_id]" id="language_id" class="form-control">
+								{% for role in roles %}
+									<option value="{{ role.id }}"{% if role.id == user.role_id %} selected{% endif %}>{{ role.name }}</option>
+								{% endfor %}
+							</select>
+						</div>
+					</div>
+
+					<div class="form-group">
 						<div class="col-xs-3 col-xs-offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
@@ -159,6 +170,17 @@
 					</div>
 
 					<div class="form-group">
+						<label for="language_id" class="col-xs-3 control-label">{% trans "Role" %}</label>
+						<div class="col-xs-4">
+							<select name="user[role_id]" id="language_id" class="form-control">
+								{% for role in roles %}
+									<option value="{{ role.id }}"{% if role.id == user.role_id %} selected{% endif %}>{{ role.name }}</option>
+								{% endfor %}
+							</select>
+						</div>
+					</div>
+
+					<div class="form-group">
 						<div class="col-xs-3 col-xs-offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
@@ -201,7 +223,9 @@
 							<th>{{ pager.create_header('First name'|trans, 'firstname')|raw }}</th>
 							<th>{{ pager.create_header('Last name'|trans, 'lastname')|raw }}</th>
 							<th>{{ pager.create_header('Username'|trans, 'username')|raw }}</th>
-							<th colspan="2">&nbsp;</th>
+							<th>{{ pager.create_header('Role'|trans, 'role.name')|raw }}</th>
+							<th width="30">&nbsp;</th>
+							<th width="30">&nbsp;</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -212,6 +236,7 @@
 						<td>{{ user.firstname }}</td>
 						<td>{{ user.lastname }}</td>
 						<td>{{ user.username }}</td>
+						<td>{{ user.role.name }}</td>
 						<td>
 							<a href="/user?action=edit&id={{ user.id }}" title="">
 								<span class="glyphicon glyphicon-pencil"></span>
