--- a/app/admin/media/css/style.css
+++ b/app/admin/media/css/style.css
@@ -39,6 +39,14 @@ body {
 	color: #8bc512
 }
 
+.customer_contact .panel-body {
+	min-height: 190px;
+}
+
+.customer_contact address {
+	margin-left: 30px;
+}
+
 .glyphicon-remove {
 	color: #db2e1b
 }
