--- a/app/admin/template/sales/invoice/queue/recurring.twig
+++ b/app/admin/template/sales/invoice/queue/recurring.twig
@@ -19,13 +19,15 @@
 			</div>
 		{% endif %}
 
-		<form class="form-horizontal form-condensed" method="post" action="/sales/invoice/queue/recurring?action=edit&id={{ invoice_queue_recurring_group.id }}">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				{% trans "Edit recurring invoice queue" %}
-			</div>
-			<div class="panel-body">
-				<div class="col-md-6">
+
+
+		<div class="row">
+		<div class="col-md-6">
+			<form class="form-horizontal form-condensed" method="post" action="/sales/invoice/queue/recurring?action=edit&id={{ invoice_queue_recurring_group.id }}">
+
+			<div class="panel panel-default">
+				<div class="panel-heading">{% trans "Edit recurring invoice queue" %}</div>
+				<div class="panel-body">
 					<div class="form-group {% if errors.name is defined %}has-error{% endif %}">
 						<label class="col-xs-3 control-label">{% trans "Name" %}</label>
 						<div class="col-xs-5">
@@ -74,6 +76,16 @@
 						toggle_run_forever();
 					</script>
 
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Customer" %}</label>
+						<div class="col-xs-5">
+							<p class="form-control-static">
+								<a href="/administrative/customer/detail?id={{ invoice_queue_recurring_group.customer_id }}">
+									{{ invoice_queue_recurring_group.customer.get_display_name() }}
+								</a>
+							</p>
+						</div>
+					</div>
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">{% trans "Created" %}</label>
@@ -87,61 +99,49 @@
 							<p class="form-control-static">&euro;{{ invoice_queue_recurring_group.get_total_price()|number_format }}</p>
 						</div>
 					</div>
-				</div>
 
-				{% set customer_contacts = invoice_queue_recurring_group.customer.get_customer_contacts() %}
-
-				<div class="col-md-6">
 					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Customer" %}</label>
-						<div class="col-xs-5">
-							<p class="form-control-static">{{ invoice_queue_recurring_group.customer.firstname }} {{ invoice_queue_recurring_group.customer.lastname }}</p>
+						<div class="col-xs-9 col-xs-offset-3">
+							<button class="btn btn-primary" type="submit">{% trans "Save" %}</button>
 						</div>
 					</div>
+
+				</div>
+			</div>
+			</form>
+		</div>
+
+		{% include 'sales/invoice/queue/recurring/modal.customer_contacts.twig' with {'id': 'change_customer_contact', 'modal_size': 'lg', 'invoice_queue_recurring_group': invoice_queue_recurring_group } %}
+
+		{% include 'administrative/customer/modal.customer_contact.twig' with {'id': 'manage-customer-contact','redirect': '/sales/invoice/queue/recurring?action=edit&id=' ~ invoice_queue_recurring_group.id, 'modal_size': 'lg'} %}
+
+		<div class="col-md-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					{% trans "Invoice contact" %}
+					<div class="pull-right">
+						<a href="#change_customer_contact" data-toggle="modal">{% trans "Change customer contact" %}</a> /
+						<a href="#manage-customer-contact" data-toggle="modal" data-customer-contact-id="{{ invoice_queue_recurring_group.customer_contact_id }}">{% trans "Modify customer contact" %}</a>
+					</div>
+				</div>
+				<div class="panel-body">
 					<div class="form-group">
 						<label class="col-xs-3 control-label">{% trans "Invoice contact" %}</label>
 						<div class="col-xs-5">
-							<select class="form-control" name="invoice_queue_recurring_group[customer_contact_id]" id="invoice_contact" onchange="javascript:update_invoice_contact()">
-								{% for customer_contact in customer_contacts %}
-									<option value="{{ customer_contact.id }}" {% if customer_contact.id == invoice_queue_recurring_group.customer_contact_id %}selected="selected"{% endif %}>
-										{{ customer_contact.firstname }} {{ customer_contact.lastname }}{% if not customer_contact.active %} [{% trans "inactive" %}]{% endif %}
-									</option>
-								{% endfor %}
-							</select>
+							{% set customer_contact = invoice_queue_recurring_group.customer_contact %}
+							<div class="form-control-static">
+								{{ base.customer_contact(customer_contact, settings) }}
+							</div>
 						</div>
 					</div>
 
-					<div class="form-group">
-						<div class="col-xs-5 col-xs-offset-3">
 
-
-						{% for customer_contact in customer_contacts %}
-						<address {% if customer_contact.id != invoice_queue_recurring_group.customer_contact_id %}class="hide"{% endif %} id="customer_contact_{{ customer_contact.id }}">
-							{% if customer_contact.company == '' %}
-								<strong>{{ customer_contact.firstname }} {{ customer_coontact.lastname }}</strong>
-							{% elseif customer_contact.firstname == '' and customer_contact.lastname == '' %}
-								<strong>{{ customer_contact.company }}</strong>
-							{% else %}
-								<strong>{{ customer_contact.firstname }} {{ customer_contact.lastname }} ({{ customer_contact.company }})</strong>
-							{% endif %}
-							<br />
-							{{ customer_contact.street }} {{ customer_contact.housenumber }}<br />
-							{{ customer_contact.zipcode }} {{ customer_contact.city }}<br />
-							{% if customer_contact.vat != '' %}
-								{{ customer_contact.country.iso2 }} {{ customer_contact.vat }} <br />
-							{% endif %}
-							{{ customer_contact.email }}
-						</address>
-						{% endfor %}
-
-
-
-						</div>
-					</div>
 				</div>
-
 			</div>
 		</div>
+		</div>
+
+
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				{% trans "Queue content" %}
@@ -152,7 +152,7 @@
 				</div>
 			</div>
 			<div class="panel-body">
-
+			<form class="form-horizontal form-condensed" method="post" action="/sales/invoice/queue/recurring?action=edit&id={{ invoice_queue_recurring_group.id }}">
 				<table id="queue_items_table" class="table table-striped table-hover">
 					<thead>
 						<tr>
@@ -181,20 +181,20 @@
 						{% endfor %}
 					</tbody>
 				</table>
-			</div>
-		</div>
 
-		<div class="col-xs-12">
-			<div class="form-group">
-				<div class="pull-right">
-					<button type="submit" class="btn btn-primary">
-						{% trans "Save" %}
-					</button>
+				<div class="col-xs-12">
+					<div class="form-group">
+						<div class="pull-right">
+							<button type="submit" class="btn btn-primary">
+								{% trans "Save" %}
+							</button>
+						</div>
+					</div>
 				</div>
+			</form>
 			</div>
 		</div>
 
-		</form>
 
 		<script>
 			function update_invoice_contact() {
@@ -211,6 +211,10 @@
 				var template = Handlebars.compile(source);
 				var html = template(context);
 				$("#queue_items_table tbody").append(html);
+			}
+
+			function remove_queue_item(element) {
+				$(element).parents('tr').remove();
 			}
 		</script>
 		<script id="cloneable" type="text/x-handlebars-template">
@@ -299,7 +303,7 @@
 			<li class="active">{% trans "Add invoice queue step 2" %}</li>
 		</ol>
 
-		{% include 'sales/invoice/modal.manage_customer_contact.twig' with {'id': 'manage-customer-contact','redirect': '/sales/invoice/queue/recurring?action=add_step2'} %}
+		{% include 'administrative/customer/modal.customer_contact.twig' with {'id': 'manage-customer-contact','redirect': '/sales/invoice/queue/recurring?action=add_step2', 'modal_size': 'lg'} %}
 
 		{% if errors is defined %}
 		<div class="alert alert-danger">
@@ -324,36 +328,42 @@
 									<a href="javascript:void(0);" onclick="delete_contact({{ customer_contact.id }})">
 										<span class="glyphicon glyphicon-trash"></span>
 									</a>
-
 								</div>
 
-								{% if customer_contact.company != '' %}{{ customer_contact.company }}<br>{% endif %}
-								{{ customer_contact.firstname }} {{ customer_contact.lastname }}<br>
-								{{ customer_contact.street }} {{ customer_contact.housenumber }}<br>
-								{{ customer_contact.zipcode }} {{ customer_contact.city }}<br>
-								{{ customer_contact.country.name }}
-								{% if customer_contact.vat != '' %}<br>{{ customer_contact.get_vat_formatted() }}{% endif %}
+								<div class="pull-left">
+									<input type="radio" name="customer_contact" />
+								</div>
+
+								{{ base.customer_contact(customer_contact, settings) }}
 							</div>
 						</div>
 					</div>
 				{% endfor %}
-					<div class="col-xs-3">
-						<div class="panel panel-default">
-							<div class="panel-body text-center">
-								<a class="btn btn-default" href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="{{ customer_contacts|length }}">
-									{% trans "Create new" %}
-								</a>
-							</div>
+				<div class="col-xs-3 customer_contact">
+					<div class="panel panel-default">
+						<div class="panel-body text-center">
+							<a class="btn btn-default" href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="{{ customer_contacts|length }}">
+								{% trans "Create new" %}
+							</a>
 						</div>
 					</div>
+				</div>
 				</div>
 
 				<form method="post" action="/sales/invoice/queue/recurring?action=add_step2">
 					<input type="hidden" name="customer_contact_id" value="{% if customer_contacts|length == 1 %}{{ customer_contacts.0.id }}{% endif %}">
-					<button class="btn btn-primary">
-						{% trans "Next" %}
-					</button>
+					<div class="pull-left">
+						<button class="btn btn-default">
+							&laquo; {% trans "Previous" %}
+						</button>
+					</div>
+					<div class="pull-right">
+						<button class="btn btn-primary">
+							{% trans "Next" %} &raquo;
+						</button>
+					</div>
 				</form>
+
 			</div>
 		</div>
 
@@ -367,9 +377,11 @@
 					$(this).find('.actions').toggleClass('hide');
 				},
 				click: function() {
+					$('.customer_contact').find('input[type=radio]').prop('checked', false);
 					$('.customer_contact').find('.panel-body').removeClass('bg-info');
 					$(this).find('.panel-body').first().addClass('bg-info');
-					$('#invoice-create-step2 input').val($(this).prop('id').replace('customer-contact-', ''));
+					$('input[name=customer_contact_id]').val($(this).prop('id').replace('customer-contact-', ''));
+					$(this).find('input[type=radio]').prop('checked', true);
 				}
 			});
 
