--- a/app/admin/template/setting/configuration.twig
+++ b/app/admin/template/setting/configuration.twig
@@ -14,7 +14,7 @@
 
 	<form action="/setting/configuration" method="post" class="form-condensed form-horizontal">
 		<div class="panel panel-default">
-			<div class="panel-heading">{% trans "Configuration" %}</div>
+			<div class="panel-heading">{% trans "Mail settings" %}</div>
 			<div class="panel-body">
 				<div class="form-group">
 					<label class="col-xs-3 control-label">{% trans "Archive mailbox" %}</label>
@@ -97,6 +97,34 @@
 
 			</div>
 		</div>
+
+
+		<div class="panel panel-default">
+			<div class="panel-heading">{% trans "Object indentifiers" %}</div>
+			<div class="panel-body">
+				<div class="form-group">
+					<label class="col-xs-3 control-label">{% trans "Customer identifier" %}</label>
+					<div class="col-xs-9">
+						<input type="text" class="form-control" name="setting[customer_identifier]" value="{{ settings.customer_identifier }}" />
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label class="col-xs-3 control-label">{% trans "Customer contact identifier" %}</label>
+					<div class="col-xs-9">
+						<input type="text" class="form-control" name="setting[customer_contact_identifier]" value="{{ settings.customer_contact_identifier }}" />
+					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="col-xs-9 col-xs-offset-3">
+						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
 
 	</form>
 
