--- a/app/admin/template/sales/creditnote.twig
+++ b/app/admin/template/sales/creditnote.twig
@@ -67,32 +67,6 @@
 		<form method="post" action="/sales/creditnote?action=create_step2" class="form-horizontal">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					{% trans "Additional info" %}
-				</div>
-				<div class="panel-body">
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Reference" %}</label>
-						<div class="col-xs-9">
-							<input type="text" class="form-control" id="reference" name="invoice[reference]" value="{{ env.session.invoice.reference }}">
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-xs-3 control-label">{% trans "Expiration date" %}</label>
-						<div class="col-xs-9">
-							<select name="invoice[expiration_date]" class="form-control">
-								<option value="+14 days">2 {% trans "weeks" %}</option>
-								<option value="+1 month" selected>1 {% trans "month" %}</option>
-								<option value="+60 days">60 {% trans "days" %}</option>
-								<option value="+90 days">90 {% trans "days" %}</option>
-							</select>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="panel panel-default">
-				<div class="panel-heading">
 					{% trans "Add items" %}
 				</div>
 				<div class="panel-body">
@@ -473,12 +447,12 @@
 					<td class="text-right">€{{ creditnote.price_excl|number_format }}</td>
 					<td class="text-right">€{{ creditnote.price_incl|number_format }}</td>
 					<td>
-						<a href="/sales/creditnote?action=download&id={{ invoice.id }}">
+						<a href="/sales/creditnote?action=download&id={{ creditnote.id }}">
 							<span class="glyphicon glyphicon-download"></span>
 						</a>
 					</td>
 					<td class="text-right">
-						<a href="/sales/creditnote?action=edit&id={{ invoice.id }}" title="">
+						<a href="/sales/creditnote?action=edit&id={{ creditnote.id }}" title="">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 					</td>
