option 'Every 2 months' should be available for new recurring invoice queue items

--- a/app/admin/template/sales/invoice/queue/recurring.twig
+++ b/app/admin/template/sales/invoice/queue/recurring.twig
@@ -41,7 +41,7 @@
 								<option value="+1 day"{% if invoice_queue_recurring_group.repeat_every == '+1 day' %} selected="selected"{% endif %}>{% trans "Every day" %}</option>
 								<option value="+1 week"{% if invoice_queue_recurring_group.repeat_every == '+1 week' %} selected="selected"{% endif %}>{% trans "Every week" %}</option>
 								<option value="+1 month"{% if invoice_queue_recurring_group.repeat_every == '+1 month' %} selected="selected"{% endif %}>{% trans "Every month" %}</option>
-								<option value="+1 month"{% if invoice_queue_recurring_group.repeat_every == '+2 months' %} selected="selected"{% endif %}>{% trans "Every 2 months" %}</option>
+								<option value="+2 months"{% if invoice_queue_recurring_group.repeat_every == '+2 months' %} selected="selected"{% endif %}>{% trans "Every 2 months" %}</option>
 								<option value="+3 months"{% if invoice_queue_recurring_group.repeat_every == '+3 months' %} selected="selected"{% endif %}>{% trans "Every 3 months" %}</option>
 								<option value="+1 year"{% if invoice_queue_recurring_group.repeat_every == '+1 year' %} selected="selected"{% endif %}>{% trans "Every year" %}</option>
 							</select>
@@ -280,6 +280,7 @@
 								<option value="+1 day">{% trans "Every day" %}</option>
 								<option value="+1 week">{% trans "Every week" %}</option>
 								<option value="+1 month">{% trans "Every month" %}</option>
+								<option value="+2 months">{% trans "Every 2 months" %}</option>
 								<option value="+3 months">{% trans "Every 3 months" %}</option>
 								<option value="+1 year">{% trans "Every year" %}</option>
 							</select>
