--- a/app/admin/template/administrative/customer/contact.twig
+++ b/app/admin/template/administrative/customer/contact.twig
@@ -17,7 +17,7 @@
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 						<a href="javascript:void(0);" onclick="delete_contact({{ customer_contact.id }})">
-							<span class="glyphicon glyphicon-trash"></span>
+							<span class="glyphicon glyphicon-remove"></span>
 						</a>
 					</div>
 
