--- a/app/admin/template/administrative/document/creditnote.twig
+++ b/app/admin/template/administrative/document/creditnote.twig
@@ -127,7 +127,7 @@
 			</td>
 			<td width="20">
 				<a href="{{ env.module.get_module_path() }}?action=delete&id={{ document.id }}" title="{% trans "Delete document" %}" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure" %}?">
-					<span class="glyphicon glyphicon-trash"></span>
+					<span class="glyphicon glyphicon-remove"></span>
 				</a>
 			</td>
 		</tr>
