--- a/app/admin/template/sales/creditnote.twig
+++ b/app/admin/template/sales/creditnote.twig
@@ -111,7 +111,7 @@
 								<td>
 									<div class="form-control-static">
 										<a href="javascript:void(0);" onclick="remove_item($(this));">
-											<span class="glyphicon glyphicon-trash"></span>
+											<span class="glyphicon glyphicon-remove"></span>
 										</a>
 									</div>
 								</td>
@@ -166,7 +166,7 @@
 				<td>
 					<div class="form-control-static">
 						<a href="javascript:void(0);" onclick="remove_item($(this));">
-							<span class="glyphicon glyphicon-trash"></span>
+							<span class="glyphicon glyphicon-remove"></span>
 						</a>
 					</div>
 				</td>
