--- a/app/admin/template/sales/invoice.twig
+++ b/app/admin/template/sales/invoice.twig
@@ -330,7 +330,7 @@
 										<span class="glyphicon glyphicon-pencil"></span>
 									</a>
 									<a href="javascript:void(0);" onclick="delete_contact({{ customer_contact.id }})">
-										<span class="glyphicon glyphicon-trash"></span>
+										<span class="glyphicon glyphicon-remove"></span>
 									</a>
 								</div>
 
@@ -484,7 +484,7 @@
 								<td>
 									<div class="form-control-static">
 										<a href="javascript:void(0);" onclick="remove_item($(this));">
-											<span class="glyphicon glyphicon-trash"></span>
+											<span class="glyphicon glyphicon-remove"></span>
 										</a>
 									</div>
 								</td>
@@ -539,7 +539,7 @@
 				<td>
 					<div class="form-control-static">
 						<a href="javascript:void(0);" onclick="remove_item($(this));">
-							<span class="glyphicon glyphicon-trash"></span>
+							<span class="glyphicon glyphicon-remove"></span>
 						</a>
 					</div>
 				</td>
