--- a/app/admin/template/sales/invoice/queue.twig
+++ b/app/admin/template/sales/invoice/queue.twig
@@ -286,7 +286,7 @@
 										<span class="glyphicon glyphicon-pencil"></span>
 									</a>
 									<a href="javascript:void(0);" onclick="delete_contact({{ customer_contact.id }})">
-										<span class="glyphicon glyphicon-trash"></span>
+										<span class="glyphicon glyphicon-remove"></span>
 									</a>
 
 								</div>
@@ -424,7 +424,7 @@
 				</td>
 				<td>
 					<a href="javascript:void(0);" onclick="remove_item($(this));">
-						<span class="glyphicon glyphicon-trash"></span>
+						<span class="glyphicon glyphicon-remove"></span>
 					</a>
 				</td>
 			</tr>
