--- a/app/admin/template/financial/account.twig
+++ b/app/admin/template/financial/account.twig
@@ -24,7 +24,7 @@
 									</span>
 									[ {{ import.file.get_human_size() }} ]
 									<a href="javascript:void(0);" onclick="remove_file($(this).parents('.file'));" title="{% trans "Delete file" %}">
-										<span class="glyphicon glyphicon-trash"></span>
+										<span class="glyphicon glyphicon-remove"></span>
 									</a>
 								</div>
 							{% endif %}
@@ -68,7 +68,7 @@
 						</span>
 						[ ((file.human_size)) ]
 						<a href="javascript:void(0);" onclick="remove_file($(this).parents('.file'));" title="{% trans "Delete file" %}">
-							<span class="glyphicon glyphicon-trash"></span>
+							<span class="glyphicon glyphicon-remove"></span>
 						</a>
 					</div>
 				</div>
@@ -112,7 +112,7 @@
 							$('#import-file').html(e);
 							$('#import-file').removeClass('hide');
 						}
-
+console.log(response);
 						if (response.parser != false) {
 							$('.form_submit').removeClass('hidden');
 						}
@@ -193,9 +193,9 @@
 					<table class="table table-hover table-striped table-condensed table-responsive">
 					<thead>
 						<tr>
-							<th>#</th>
-							<th>{{ pager.create_header('Identifier'|trans, 'identifier')|raw }}</th>
+							<th>{{ pager.create_header('Number'|trans, 'number')|raw }}</th>
 							<th>{{ pager.create_header('Name'|trans, 'name')|raw }}</th>
+							<th>{{ pager.create_header('Description'|trans, 'description')|raw }}</th>
 							<th width="20">&nbsp;</th>
 						</tr>
 					</thead>
@@ -203,9 +203,9 @@
 				{% endif %}
 
 				<tr>
-					<td>{{ account.id }}</td>
-					<td>{{ account.identifier }}</td>
+					<td>{{ account.number }}</td>
 					<td>{{ account.name }}</td>
+					<td>{{ account.description }}</td>
 					<td>
 						<a href="/financial/account?action=edit&id={{ account.id }}" title="">
 							<span class="glyphicon glyphicon-pencil"></span>
