--- a/app/admin/template/administrative/customer.twig
+++ b/app/admin/template/administrative/customer.twig
@@ -171,7 +171,40 @@
 			}
 			change_country();
 		</script>
+	{% elseif action == 'export' %}
+		<ol class="breadcrumb">
+			<li><a href="/">{% trans "Home" %}</a></li>
+			<li><a href="/administrative_customer">{% trans "Customers" %}</a></li>
+			<li class="active">{% trans "Export customers" %}</li>
+		</ol>
 
+		<form class="form-horizontal" method="post" action="/administrative/customer?action=export">
+		<div class="well">
+			<div class="form-group">
+				<label class="col-xs-3 control-label">{% trans "Total number of customers" %}</label>
+				<div class="col-xs-9">
+					<p class="form-control-static" id="total_amount">{{ pager.item_count }}</p>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<label class="col-xs-3 control-label">{% trans "Export format" %}</label>
+				<div class="col-xs-4">
+					<select name="export_format" class="form-control">
+						<option value="Export_Expertm_User">Expert/M</option>
+					</select>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<div class="col-xs-9 col-xs-offset-3">
+					<button type="submit" class="btn btn-primary">
+						{% trans "Download" %}
+					</button>
+				</div>
+			</div>
+		</div>
+		</form>
 	{% elseif env.module.get_name() != 'administrative_customer' %}
 
 		<ol class="breadcrumb">
@@ -198,7 +231,6 @@
 		<div class="tab-content">
 			{% block tab %}{% endblock tab %}
 		</div>
-
 	{% else %}
 
 		<ol class="breadcrumb">
@@ -240,6 +272,11 @@
 						<span class="glyphicon glyphicon-plus-sign"></span>
 						{% trans "Add customer" %}
 					</a>
+					-
+					<a href="/administrative/customer?action=export" title="{% trans "Export customers" %}">
+						<i class="fa fa-file"></i> {% trans "Export customers" %}
+					</a>
+
 				</div>
 				{{ base.pager_count(pager.item_count) }}
 			</div>
